--- a/ExtendIt.Tests/ExtendIt.Tests.csproj
+++ b/ExtendIt.Tests/ExtendIt.Tests.csproj
@@ -57,6 +57,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="GivenReferenceTypeExtensionPoint.cs" />
+    <Compile Include="GivenValueTypeExtensionPoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
