--- a/ExtendIt.nuspec
+++ b/ExtendIt.nuspec
@@ -2,12 +2,12 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExtendIt</id>
-        <version>0.1.0.1</version>
+        <version>0.1.0.2</version>
         <title>ExtendIt</title>
         <authors>Furry Builder</authors>
         <owners>Furry Builder</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>An ultra light-weight dependency injection container built around the power of factories.</description>
+        <description>A simple tool that enables namespacing of extension methods.</description>
     </metadata>
     <files>
         <file src="ExtendIt.WPF\bin\Release\ExtendIt.WPF.dll" target="lib\net45\ExtendIt.WPF.dll" />
