--- a/ExtendIt.nuspec
+++ b/ExtendIt.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExtendIt</id>
-        <version>0.1.0.2</version>
+        <version>$version$</version>
         <title>ExtendIt</title>
         <authors>Furry Builder</authors>
         <owners>Furry Builder</owners>
